[package]
name = "termwrap"
version = "0.2.1"
edition = "2024"
description = "Wrap Unicode text with ANSI color codes"
repository = "https://github.com/qtfkwk/termwrap"
license = "MIT"
readme = "README.md"
keywords = [ "wrap", "fold", "string", "unicode", "color" ]
categories = [ "text-processing" ]

[dependencies]
strip-ansi-escapes = "0.2.1"
unicode-segmentation = "1.12.0"
